--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ a:visited {
 #page1 {
   background-color: #000000;
   color: #e6e6e6;
-  background-image: url('/assets/landingpage.png');
+  background-image: url('assets/landingpage.png');
   background-position: left bottom; 
   background-repeat: no-repeat; 
   background-size: 55%;
