--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ a:visited {
   background-image: url('assets/landingpage.png');
   background-position: left bottom; 
   background-repeat: no-repeat; 
-  background-size: 55%;
+  background-size: 50%;
 }
 
 #page1 h1 {
@@ -80,11 +80,11 @@ a:visited {
 }
 
 .landingpagebit {
-  width: 55%;
+  width: 50%;
   display: flex;
   flex-direction: column;
   float: right;
-  padding: 3em;
+  padding: 3em 1em;
 }
 
 .inlineimg {
@@ -111,10 +111,15 @@ a:visited {
   padding: 3rem 0 0 2rem;
 }
 
+.page2 .contentheading {
+  padding: 5rem 0 0 2rem;
+}
+
 #simulation {
   max-width: 40%;
   max-height: 90vh;
   float: right;
+  padding: 0em 1em;
 }
 
 .bajacontentcontainer {
@@ -211,8 +216,7 @@ a:visited {
   flex-direction: row;
   overflow-x: scroll;
   gap: 1em;
-  padding-left: 2rem;
-  padding-right: 100px;
+  padding: .5rem 100px 2rem 2rem; 
 }
 
 .project {
@@ -271,7 +275,7 @@ a:visited {
   position: absolute;
   opacity: 0;
   animation: fade 8s infinite; /* add 2s to the middle number here */
-  padding-left: 0.125em;
+  padding-left: 0.25em;
 }
 
 .text-change:nth-child(1) {
