--- a/style.css
+++ b/style.css
@@ -263,58 +263,14 @@ a:visited {
   }
 }
 
+.text-container {
+  margin-left: .5rem;
+}
 
-
-
-
-
-
-
-/* For every word you want to add, make sure to make the following changes for EACH word: */
 .text-change {
   position: absolute;
-  opacity: 0;
-  animation: fade 8s infinite; /* add 2s to the middle number here */
-  padding-left: 0.25em;
+  max-width: 100%;
+  white-space: nowrap;
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
 }
-
-.text-change:nth-child(1) {
-  animation-delay: 0s;
-}
-
-.text-change:nth-child(2) {
-  animation-delay: 2s;
-}
-
-.text-change:nth-child(3) {
-  animation-delay: 4s;
-}
-/* copy and paste the below code for each word you want to add,
-   and change the nth-child number to the next number in the sequence by following the directions
-   also dont forget to delete the comments i made in the code
-
-
-.text-change:nth-child(3) { <<<<<<< change this number 3 to the next number in the sequence
-  animation-delay: 4s; <<<<<<< change this number 4 to the next number in the sequence of 2s increments
-}
-*/
-.text-change:nth-child(4) {
-  animation-delay: 6s;
-}
-
-@keyframes fade {
-  0% { opacity: 0; }
-  20% { opacity: 1; }
-  /* if the words start to feel like they are too on top of eachother start to change the below opacities to 0 from bottom to top*/
-  21% { opacity: 1; }
-  22% { opacity: 1; }
-  23% { opacity: 1; }
-  24% { opacity: 1; }
-  25% { opacity: 1; }
-  30% { opacity: 0; } 
-  40% { opacity: 0; }
-  60% { opacity: 0; }
-  100% { opacity: 0; }
-}
-
-
