--- a/style.css
+++ b/style.css
@@ -123,40 +123,63 @@ a:visited {
 }
 
 .bajacontentcontainer {
-  padding: 2rem
+  padding: 1rem 3rem;
 }
 
 .columncontainer {
   display: flex;
   flex-direction: row;
   max-width: 100%;
-  gap: 1em;
+  gap: 2rem;
+  font-size: .75rem;
+  text-align: center;
 }
 
-.columncontainer img {
-  width: 100%;
-  padding: 2em 1em 0 0;
+.columncontainer p {
+  padding: 0 0 1rem 0;
+}
+
+.start {
+  padding: 0 0 1rem 0;
 }
 
 .leftcolumn {
-  flex: .7;
+  flex: 1.1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .rightcolumn {
   flex: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.bajacontentcontainer img {
+  max-width: 75%;
+}
+
+.smaller {
+  max-width: 45% !important;
 }
 
 .halfshaftscontainer {
   display: grid;
   padding: 2rem;
-  grid-template-columns: .2fr .3fr .6fr 1fr;
-  grid-template-rows: auto auto;
+  grid-template-columns: .13fr .23fr .6fr 1fr;
+  grid-template-rows: .5fr 0.3fr 1fr 1fr;
   grid-template-areas: 
     "img1 content1 content1 content1"
     "img1 img2 img2 content2"
     "img1 img3 content3 content3"
     "img1 img3 content3 content3";
-  gap: 1.5rem;
+  gap: 1rem;
+  place-items: center;
+}
+.center {
+  text-align: center;
 }
 .halfshaftscontainer img {
   max-width: 100%;
@@ -169,6 +192,7 @@ a:visited {
 }
 .secondhalfshaftimg {
   grid-area: img2;
+  max-width: 70% !important;
 }
 .thirdhalfshaftimg {
   grid-area: img3;
@@ -242,6 +266,12 @@ a:visited {
   flex-direction: row;
   gap: 3em;
   padding-bottom: 1em;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
 }
 
 /* small devices */
